<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="30dp"
            android:layout_marginTop="1dp"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/prenom"
            android:textColor="@color/bleu_fonce"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/prenom"
            android:layout_width="300dp"
            android:layout_height="48dp"

            android:hint="@string/prenom" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/nom"
            android:textColor="@color/bleu_fonce"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/nom"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/nom" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/dateNaiss"
            android:textColor="@color/bleu_fonce"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/datenaiss"
            android:layout_width="300dp"
            android:layout_height="39dp"
            android:ems="10"
            android:hint="@string/hintdatenaiss"
            android:inputType="date" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/mail"
            android:textColor="@color/bleu_fonce"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/mail" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/mdp"
            android:textColor="@color/bleu_fonce"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/mdpsignup"
            android:layout_width="300dp"
            android:layout_height="39dp"
            android:layout_marginTop="12dp"
            android:hint="@string/hintmdp" />

        <EditText
            android:id="@+id/mdpsignupconfirme"
            android:layout_width="300dp"
            android:layout_height="39dp"
            android:hint="@string/hintconfirmmdp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/taille"
            android:textColor="@color/bleu_fonce"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/taille"
            android:layout_width="300dp"
            android:layout_height="39dp"
            android:ems="10"
            android:hint="@string/hinttaille"

            android:inputType="number" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/poids"
            android:textColor="@color/bleu_fonce"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/poids"
            android:layout_width="300dp"
            android:layout_height="39dp"
            android:ems="10"
            android:hint="@string/hintpoids"

            android:inputType="number" />

        <Button
            android:id="@+id/sign"
            android:layout_width="134dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green"
            android:text="@string/signup">

        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>