<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/app_name"
            android:textColor="@color/pink"
            android:textAlignment="center"
            android:textSize="30dp" />


        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/mail"
            android:textSize="25dp"
            android:textColor="@color/bleu_fonce"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/mail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/mail"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/mdp"
            android:textSize="25dp"
            android:textColor="@color/bleu_fonce"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/mdp"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/mdp"
            android:layout_marginTop="20dp"/>


            <Button
                android:id="@+id/add"
                android:layout_width="134dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/green"
                android:text="@string/seconnecter">

            </Button>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/inscrire"
            android:paddingLeft="55dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

    </LinearLayout>





    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>